# pascai-skill

./: .gitignore  CONTRIBUTING.md  CREDITS.md  GUIDE.md  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  update-skills.yml
pascai_skill/: __init__.py
pascai_skill/adapters/: __init__.py  aider.py  base.py  claude_code.py  codex.py  cursor.py  gemini_cli.py  opencode.py
pascai_skill/cli/: __init__.py  commands.py  main.py
pascai_skill/core/: __init__.py  base_skill.py  exceptions.py  interfaces.py  models.py
pascai_skill/engine/: __init__.py  backup.py  changelog.py  migration.py  update_engine.py
pascai_skill/installer/: __init__.py  bootstrap.py  validator.py
pascai_skill/knowledge/: __init__.py  base.py
pascai_skill/memory/: __init__.py  store.py
pascai_skill/plugins/: __init__.py  discovery.py  loader.py
pascai_skill/skills/: __init__.py  manager.py  metadata.py  registry.py
pascai_skill/upstream/: __init__.py  repository.py  sync.py  version_db.py
scripts/: check_upstream_updates.py
skills/context_compression/: skill.yaml
skills/context_compression/prompts/: compress.md
skills/context_compression/templates/: compression_report.md.jinja
skills/context_compression/tools/: compress.yaml
skills/document_intelligence/: skill.yaml
skills/document_intelligence/prompts/: analyze.md  (+1 more)
skills/documentation/: skill.yaml
skills/long_term_memory/: skill.yaml
skills/ui_design/: skill.yaml
tests/: test_adapters.py  test_core_models.py  test_engine.py  test_knowledge.py  test_memory.py  test_skill_loader.py  test_upstream.py
(+11 files in other folders)
