[project]
name = "pascai-skill"
version = "0.1.0"
description = "Portable AI Operating System for multi-agent orchestration"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Pascal AI", email = "dev@pascai.ai"}]

dependencies = [
    "pydantic>=2.0,<3",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
    "gitpython>=3.1",
    "httpx>=0.25",
    "structlog>=24.0",
    "pathspec>=0.12",
    "importlib_metadata>=7.0; python_version < '3.12'",
]

[project.optional-dependencies]
docling = ["docling>=2.0"]
docusaurus = ["nodejs-bin>=0.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.2",
    "pre-commit>=3.0",
]

[project.scripts]
pascai = "pascai_skill.cli.main:cli"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pascai_skill", "skills"]
